--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@techiediaries/ngx-qrcode",
-  "version": "0.2.1",
+  "name": "@cmgustavo/ngx-qrcode",
+  "version": "1.0.1",
   "scripts": {
     "build": "gulp build",
     "build:watch": "gulp",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/techiediaries/ngx-qrcode.git"
+    "url": "git+https://github.com/cmgustavo/ngx-qrcode.git"
   },
   "author": "Techiediaries <techiediaries9@gmail.com>",
   "keywords": [
@@ -17,18 +17,18 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/techiediaries/ngx-qrcode/issues"
+    "url": "https://github.com/cmgustavo/ngx-qrcode/issues"
   },
   "devDependencies": {
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/common": "^5.1.3",
+    "@angular/compiler": "^5.1.3",
+    "@angular/compiler-cli": "^5.1.3",
+    "@angular/core": "^5.1.3",
+    "@angular/platform-browser": "^5.1.3",
+    "@angular/platform-browser-dynamic": "^5.1.3",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
-    "codelyzer": "~2.0.0",
+    "codelyzer": "~4.2.1",
     "core-js": "^2.4.1",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
@@ -47,8 +47,8 @@
     "run-sequence": "^1.2.2",
     "rxjs": "^5.1.0",
     "ts-node": "~2.0.0",
-    "tslint": "~4.5.0",
-    "typescript": "~2.4.0",
+    "tslint": "~5.8.0",
+    "typescript": "2.6.2",
     "zone.js": "^0.8.4"
   },
   "engines": {
@@ -58,7 +58,7 @@
     "qrcode": "^0.8.2"
   },
   "description": "An Angular 4+ Component library for Generating QR (Quick Response ) Codes .",
-  "homepage": "https://github.com/techiediaries/ngx-qrcode#readme",
+  "homepage": "https://github.com/cmgustavo/ngx-qrcode#readme",
   "main": "gulpfile.js",
   "directories": {
     "doc": "docs"
