--- a/src/package.json
+++ b/src/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "@techiediaries/ngx-qrcode",
-  "version": "0.0.8",
+  "name": "@cmgustavo/ngx-qrcode",
+  "version": "1.0.1",
   "description": "An Angular 4+ component for generating QRCodes ",
-  "homepage": "https://www.techiediaries.com/ngx-qrcode",
   "repository": {
     "type": "git",
-    "url": "https://github.com/techiediaries/ngx-qrcode"
+    "url": "https://github.com/cmgustavo/ngx-qrcode"
   },
   "author": {
     "name": "Ahmed Bouchefra",
@@ -17,12 +16,12 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/techiediaries/ngx-qrcode/issues"
+    "url": "https://github.com/cmgustavo/ngx-qrcode/issues"
   },
   "module": "ngx-qrcode.js",
   "typings": "ngx-qrcode.d.ts",
   "peerDependencies": {
-    "@angular/core": "^5.0.0",
+    "@angular/core": "^5.1.3",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
