--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cmgustavo/ngx-qrcode",
+  "name": "@gabrielbazan7/ngx-qrcode",
   "version": "1.0.1",
   "scripts": {
     "build": "gulp build",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cmgustavo/ngx-qrcode.git"
+    "url": "git+https://github.com/gabrielbazan7/ngx-qrcode.git"
   },
   "author": "Techiediaries <techiediaries9@gmail.com>",
   "keywords": [
@@ -17,7 +17,7 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cmgustavo/ngx-qrcode/issues"
+    "url": "https://github.com/gabrielbazan7/ngx-qrcode/issues"
   },
   "devDependencies": {
     "@angular/common": "^5.1.3",
@@ -58,7 +58,7 @@
     "qrcode": "^0.8.2"
   },
   "description": "An Angular 4+ Component library for Generating QR (Quick Response ) Codes .",
-  "homepage": "https://github.com/cmgustavo/ngx-qrcode#readme",
+  "homepage": "https://github.com/gabrielbazan7/ngx-qrcode#readme",
   "main": "gulpfile.js",
   "directories": {
     "doc": "docs"
